# nd-flowy

./: .daggerignore  .dockerignore  .env.example  .gitignore  Dockerfile  agents.md  dagger.json  docker-compose.yml  install.sh  justfile  mise.toml  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/workflowy_flow/: __init__.py  main.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  database.py  schemas.py
app/routers/: __init__.py  api.py
app/services/: __init__.py  workflowy_client.py
app/static/: styles.css
app/web/: __init__.py  components.py  kanban.py  pages.py
docs/claude/: chrome-extension.md
docs/devcontainers/: logs-domains.md  readme.md
docs/fastapi/: live-reload.md
docs/fasthtml/: live-reload.md
docs/flow/features/: column-collapsing.md  filter-search.md  kanban-board.md  live-reload.md  status-tags.md  tab-navigation.md  todo-completion.md
docs/just/: patterns.md  readme.md
docs/mise/: readme.md
docs/orbstack/: local-domains-and-https.md
docs/workflowy/: about.md  api-keys.md  readme.md
tests/: __init__.py  conftest.py  test_api.py  test_kanban_logic.py  test_workflowy_client.py
