[project]
name = "workflowy-flow-dagger"
version = "0.1.0"
description = "Dagger CI/CD pipeline for Workflowy Flow"
requires-python = ">=3.12"
dependencies = []

[project.entry-points."dagger.mod"]
main_object = "workflowy_flow:WorkflowyFlow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflowy_flow"]
